--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -782,6 +782,20 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6191057/pdf/nihms956496.pdf},
    year = {2011},
 }
 
+@article{Strobel2020,
+   author = {Strobel, A. and Wieder, G. and Paulus, P. C. and Ott, F. and Pannasch, S. and Kiebel, S. J. and Kuhrt, C.},
+   title = {Dispositional cognitive effort investment and behavioral demand avoidance: Are they related?},
+   journal = {PLoS One},
+   volume = {15},
+   number = {10},
+   pages = {e0239817},
+   ISSN = {1932-6203 (Electronic)
+1932-6203 (Linking)},
+   DOI = {10.1371/journal.pone.0239817},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/33052978},
+   year = {2020}
+}
+
 @article{Tamir2015,
    author = {Tamir, M. and Bigman, Y. E. and Rhodes, E. and Salerno, J. and Schreier, J.},
    title = {An expectancy-value model of emotion regulation: implications for motivation, emotional experience, and decision making},
