--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -77,7 +77,7 @@ A strategy that is less effortful and can objectively regulate arousal (i.e., is
 SVs of ER Strategies could therefore be helpful to describe the ER repertoire[@Aldao2015] more comprehensively.
 Depending on the flexibility of a person, different patterns of SVs could be conceivable: A person with high flexibility would show relatively high SVs for a number of strategies.
 This would mean that all strategies are a good option for goal achievement.
-A second person with less flexibility, however, would show high SVs only for only one strategy or low SVs for all of the strategies.
+A second person with less flexibility, however, would show high SVs only for one strategy or low SVs for all of the strategies.
 This in turn would mean that there is only a limited amount of strategies in the repertoire to choose from. 
 Subsequently, the ability to choose an appropriate strategy for a specific situation is also limited.
 
