--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -123,7 +123,7 @@ If a participant always chooses the strategy with the fixed 2 € reward, the ot
 The sixth adjustment of 0.02 € will be done during data analysis, based on the participants' decision in the last display of the pairing.
 Participants will be instructed to decide as realistically as possible by imagining that the monetary reward is actually available for choice.
 
-*Part three: ER choice.* <br> After the discounting part, participants will choose which of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
+*Part three: ER choice.* <br> After the discounting part, participants will choose which one of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
 Importantly, there will be no further instruction on what basis they should make their decision.
 Participants should make their decision freely, according to criteria they consider important for themselves.
 However, participants will be asked to state the reasons for the decision afterwards.
