--- a/06_Paper/COG-ED/CAD.bib
+++ b/06_Paper/COG-ED/CAD.bib
@@ -877,4 +877,17 @@
   url       = {psyarxiv.com/ysh3q},
 }
 
+@Article{Mussel2016,
+  author    = {Patrick Mussel and Natalie Ulrich and John J. B. Allen and Roman Osinsky and Johannes Hewig},
+  journal   = {Scientific Reports},
+  title     = {Patterns of theta oscillation reflect the neural basis of individual differences in epistemic motivation},
+  year      = {2016},
+  month     = {jul},
+  number    = {1},
+  volume    = {6},
+  doi       = {10.1038/srep29245},
+  groups    = {CAD},
+  publisher = {Springer Science and Business Media {LLC}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
