incorporated changes and added references

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -391,6 +391,19 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    year = {1998}
 }
 
+@article{Gross2015,
+   author = {Gross, J. J.},
+   title = {Emotion regulation: Current status and future prospects},
+   journal = {Psychological Inquiry},
+   volume = {26},
+   number = {1},
+   pages = {1-26},
+   ISSN = {1047-840x},
+   DOI = {10.1080/1047840x.2014.940781},
+   url = {<Go to ISI>://WOS:000350648700001},
+   year = {2015}
+}
+
 @article{GrossJohn2003,
    author = {Gross, J. J. and John, O. P.},
    title = {Individual differences in two emotion regulation processes: implications for affect, relationships, and well-being},
@@ -403,6 +416,20 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    DOI = {10.1037/0022-3514.85.2.348},
    url = {https://www.ncbi.nlm.nih.gov/pubmed/12916575},
    year = {2003},
+}
+
+@article{Gyurak2011,
+   author = {Gyurak, A. and Gross, J. J. and Etkin, A.},
+   title = {Explicit and implicit emotion regulation: a dual-process framework},
+   journal = {Cogn Emot},
+   volume = {25},
+   number = {3},
+   pages = {400-12},
+   ISSN = {1464-0600 (Electronic)
+0269-9931 (Linking)},
+   DOI = {10.1080/02699931.2010.544160},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/21432682},
+   year = {2011},
 }
 
 @Article{Harris2009,
@@ -543,6 +570,19 @@ https://www.nature.com/articles/nn2007.pdf},
   publisher = {University of Florida},
   title     = {International affective picture system (IAPS): Affective ratings of pictures and instruction manual},
   year      = {2008},
+}
+
+@article{MesmerMagnus2012,
+   author = {Mesmer-Magnus, J. R. and DeChurch, L. A. and Wax, A.},
+   title = {Moving emotional labor beyond surface and deep acting: A discordance-congruence perspective},
+   journal = {Organizational Psychology Review},
+   volume = {2},
+   number = {1},
+   pages = {6-53},
+   ISSN = {2041-3866},
+   DOI = {10.1177/2041386611417746},
+   url = {<Go to ISI>://WOS:000209382500002},
+   year = {2012}
 }
 
 @Manual{Morey2021,
