--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.tex
@@ -423,7 +423,7 @@ Participants will be instructed to decide as realistically as possible by imagin
 \emph{Part three: ER choice.} After the discounting part, participants will choose which one of the three ER strategies (distraction, distancing or suppression) they want to re-apply.
 Importantly, there will be no further instruction on what basis they should make their decision.
 Participants should make their decision freely, according to criteria they consider important for themselves.
-However, participants will be asked to state the reasons for the decision afterwards.
+However, participants will be asked to state the reasons for the decision afterwards in RedCap using a free text field.
 As soon as they have decided, they will see the respective instruction and the block with another 20 negative pictures starts.
 
 \begin{figure}
