--- a/06_Paper/COG-ED/CAD.bib
+++ b/06_Paper/COG-ED/CAD.bib
@@ -890,4 +890,15 @@
   publisher = {Springer Science and Business Media {LLC}},
 }
 
+@Misc{Wetzels2015,
+  author    = {Ruud Wetzels and Don van Ravenzwaaij and Eric-Jan Wagenmakers},
+  month     = {jan},
+  title     = {Bayesian Analysis},
+  year      = {2015},
+  doi       = {10.1002/9781118625392.wbecp453},
+  groups    = {CAD},
+  pages     = {1--11},
+  publisher = {John Wiley {\&} Sons, Inc.},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
